# h-genai

./: .gitignore  README.md
.github/workflows/: aws-deployment.yml
data/: explore_ofgl_api.ipynb  pp_ofgl_data.ipynb
server/: .dockerignore  .gitignore  Dockerfile  README.md  data_answer.json  pyproject.toml  test_local.sh
server/agent/: README.md  agents.py  answer.json  data.json  data_answer.json  data_example.json  data_template.json  main.py  orchestrator.py  pipeline.py  prompt.py  rag_pipeline.py  tools.py  util.py
server/api/: main.py  pdf_generator_lambda.py
server/template/: index.html  styles.css
server/tests/: conftest.py  test_basic.py  test_local_lambda.py
web-app/: README.md  index.html  package-lock.json  package.json
web-app/src/: App.vue
web-app/src/assets/: records.json
web-app/src/components/ui/command/: Command.vue
web-app/src/components/ui/progress/: Progress.vue
web-app/src/stores/: municipalities.js  userSelection.js
