[tool.poetry]
name = "h-genai"
version = "0.1.0"
description = ""
authors = ["podolskyDavid <david.podolskyi@tum.de>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = ">=0.115.8,<0.116.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
