[tool.poetry]
name = "h-genai-server"
version = "0.1.0"
description = ""
authors = ["podolskyDavid <david.podolskyi@tum.de>"]
packages = []


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
mangum = "^0.17.0"
pydantic = "^2.6.0"
python-dotenv = "^1.0.0"
haystack-ai = "^2.0.0b5"
openai = "^1.12.0"
amazon-bedrock-haystack = "^0.1.0"
weasyprint = "^64.0"
jinja2 = "^3.1.5"
requests = ">=2.31.0,<3.0.0"
pandas = ">=2.1.4,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = {extras = ["jupyter"], version = "^24.1.0"}
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
    "tests/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = [
    "haystack.*",
    "haystack_integrations.*",
    "docling.*",
]
ignore_missing_imports = true
